MDEV-15965 Invisible columns and LOAD DATA don't work well together:... ER_WARN_TOO_FEW_RECORDS

Fix mysql_load iterator to skip invisible fields.